# budget-app

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
backend/: main.py
client/: package-lock.json  package.json
client/src/: App.jsx
test/: test_main.py
