[project]
name = "budget-app"
version = "0.1.0"
description = "Most 'Budget Apps' I've used in the past are terrible. I want a custom one!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "httpx2>=2.5.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
]
[tool.pytest.ini_options]
pythonpath = [
    "."
]
